# tutorial_yarp-opencv

./: .gitpod.yml  CMakeLists.txt  PITCHME.md  PITCHME.yaml  README.md  main.cpp  yarp-opencv.thrift  yarp-opencv.xml
app/: CMakeLists.txt
app/conf/: config.ini
app/scripts/: yarp-opencv.xml  yarp-opencv.xml.template
smoke-test/: CMakeLists.txt  post-test.sh  pre-test.sh  test.cpp  test.sh  test.xml
smoke-test/fixtures/: fixture.xml
